--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ table {
     box-sizing: border-box;
 }
 
-/* Clear fix hack 
+/* Clear fix hack */ 
 .clearfix:after {
     content: ".";
     display: block;
@@ -64,98 +64,10 @@ table {
 .clear {
    clear: both;
 }
-*/
-/******************************************
-/* BASE STYLES
-/******************************************
-
-img{
-    position: relative;
-}
-button{
-    background: black;
-    color: white;
-    position: relative;
-}
-a{
-   color: white;
-   font-style: normal;
-}
-nav{
-    float: right;
-}
-li{
-    float: left;
-
-}
-.signin{
-    color: white;
-}
-form{
-    clear: both;
-}
-header{
-    height: 100px;
-    background:black;
-    max-width: 100%;
-    position: relative;
-    
-}
-#Home{
-    display: inline-block;
-    width: 100%;
-    height: 200px;
-   
-}
-main{
-    width: 45%;
-    float: left;
-}
-#articles{
-    
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr;
-    grid-template-rows: auto;
-    
-}
-
-#body{
-    clear: both;
-    display: inline-block;
-    width: 100%;
-    margin: 200px 0;
-    padding: 200px 0;
-}
-.nEws{
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
-    grid-template-rows: 1fr;
-}
-
-
-*****************************************
-/* LAYOUT
-/*******************************************
-
-
-.tension img , .health img, .workLife img, .folk img{
-    width: 250px;
-    height: 150px;
-
-}
-
-@media screen and (max-width:960px) {
-    #Home, #body{
-        
-    }
-}
-
-
-
-*****************************************
-/* Navbar and Logo
+/********************************************/
+    /* MOBILE DEVELOPMENT */
 /*******************************************/
-@media all and (max-width: 1000px){
+@media all and (max-width: 1000px) and (min-width: 450px){
     
 
     header{
@@ -193,53 +105,58 @@ main{
     /* Hero
     /*******************************************/
     #heroContainer{
-        height: 500px;
+        height: 120vh;
+        text-align: center;
         display: flex;
-        justify-content: space-around;
         flex-wrap: wrap;
-        width: 100%;
-        border: 2px solid red;
+        align-items: center;
+        width: 100vw;
         background: #08395e;
 
     }
     .hero{
         display:grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 100px;
+        grid-template-columns: 1fr ;
+        grid-template-rows: 50vh 25vh;
         gap: 20px;
-        align-items: center ;
-
-    
+        justify-content: start;
     }
     h1{
         width: 100%;
-        margin: 15px 0 0 10px;
+        padding: 5px ;
         font-family: 'Source Sans Pro', sans-serif;
-        font-size: 28px;
+        font-size: 36px;
         color: #C6C2BB;
     }
-    .main,
-    .imgContainer{
-        border: 2px solid green;
-        height: 400px;
-        width: 500px;
+    .main{
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        width: 100vw;
+        height: 50vh;
+       
     }
+  
     .main img{
-        height: 400px;
-        width: 500px;
+        height: 50vh;
+        width: 50vw;
         box-shadow: 4px 4px 30px black;
     }
     .imgContainer{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 100px 100px;
-    gap: 40px;
-    padding: 50px 0 50px 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 10vh;
+        gap: 2px;
+        height: 110px;
+        width: 100vw;
+    
     }
-    .right{
-        border: 2px solid red;
-        width: 150px;
-        height: 100px;
+    .img{
+        padding: 5px;
+        margin: 0 10px;
+        width: 20vw;
+        height: 20vh;
+        box-shadow: 4px 4px 30px black;
     }
     /*****************************************/
     /* Identification
