--- a/css/styles.css
+++ b/css/styles.css
@@ -64,10 +64,240 @@ table {
 .clear {
    clear: both;
 }
+
 /********************************************/
-    /* MOBILE DEVELOPMENT */
+    /* MOBILE DEVELOPMENT START*/ 
 /*******************************************/
-@media all and (max-width: 1000px) and (min-width: 450px){
+@media all and (max-width: 620px) and (min-width: 350px){
+    
+
+    header{
+        width: 100%;
+        height: 65px;
+        background: #c5b7a9 ;
+        display: flex;
+    }
+    header a{
+        text-decoration: none;
+        color: #074370;
+    }
+    header a:hover{
+        color: #fff;
+    }
+    .logo{
+        width: 75px;
+        height: 75px;    
+    }
+    .menuContainer{
+        width: 75%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #menu{
+        display: flex;
+        flex-direction: row;  
+        
+    }
+    .menuElements{
+        display: flex;
+        justify-content: space-around;
+        padding: 10px;
+    }
+    
+    /*****************************************/
+    /* Hero
+    /*******************************************/
+    #heroContainer{
+        height: 100vh;
+        text-align: center;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        width: 80vw;
+        background: #fff;
+
+    }
+    .hero{
+        display:grid;
+        grid-template-columns: 1fr ;
+        grid-template-rows: 50vh 25vh;
+        gap: 20px;
+        justify-content: start;
+    }
+    h1{
+        width: 100%;
+        padding: 5px ;
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 36px;
+        color: #000;
+    }
+    .main{
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        width: 100vw;
+        height: 50vh;
+       
+    }
+  
+    .main img{
+        height: 50vh;
+        width: 50vw;
+        box-shadow: 4px 4px 30px black;
+    }
+    .imgContainer{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 10vh;
+        gap: 2px;
+        height: 110px;
+        width: 100vw;
+    
+    }
+    .img{
+        padding: 5px;
+        margin: 0 10px;
+        width: 20vw;
+        height: 20vh;
+        box-shadow: 4px 4px 30px black;
+    }
+    /*****************************************/
+    /* Identification
+    /*******************************************/
+    #identify{
+        color: #fff;
+        background:#08395e; 
+
+    }
+    .h2{
+        font-size: 32px;
+        font-weight: 300;
+        margin-top: 15px;
+        color: #fff;
+    }
+    .identifyContainer{
+        width: 100%;
+        margin: 40px 0 0 0 ;
+        border: 2px solid #FFF;
+
+    }
+    .slide-container{
+        max-width: 100vw;
+        width: 400px;
+        height: 100vh;
+
+    }
+    .slide-content{
+        margin: 0 40px;
+    }
+    .cardWrapper{
+        width: 100vw;
+        height: 100vh;
+        border: 2px solid red;
+        overflow: hidden;
+    }
+    .card{
+        width: 300px;
+        color: #a0b6ca;
+        box-shadow: 4px 4px 30px black;
+        overflow: hidden;
+        border: 2px solid yellow;
+        
+    }
+    
+    .cardImg{
+        width: 100%;
+        height: 150px;
+    
+    }
+    .cardImg .innerImg{
+        object-fit: cover;
+        border-radius: 75%;
+    }
+    .innerImg{
+        width: 100%;
+    }
+    .tortoise{
+        background: hsl(146, 64%, 25%); 
+     
+    }
+    .tortoise h2{
+        color: #b0dfaa;
+
+    }
+    .turtle{
+        background: #074370;
+    }
+    .terrapin{
+        background: rgb(98, 70, 28);
+    }
+
+    .imgContent, .intro{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 14px;
+    }
+    .overlayA, .overlayB{
+       
+        left: 0;
+        top: 0;
+        height: 50vh;
+        width: 100vw;
+    }
+    .overlayA{
+        background-color: #b89e6f;
+    }
+    .overlayB{
+        background-color: #a0b6ca;
+    }
+    .intro{
+        margin-top: 25px ;
+    }
+    .intro h2{
+        font-weight: 700;
+        font-size: 28px;
+    }
+    .cardBody{
+        width: 100%;
+        margin: 0 15px;
+        color: #fff;
+    }
+    button{
+        border: none;
+        font-size: 16px;
+        background:#b89e6f;
+        border-radius: 5%;
+        margin: 5px;
+        cursor: pointer;
+    }
+    button:hover{
+        background: #c99027;
+        color: #fff;
+    }
+}
+
+
+
+
+
+/********************************************/
+    /* MOBILE DEVELOPMENT END*/ 
+/*******************************************/
+
+
+
+
+
+
+
+
+
+/********************************************/
+    /* MOBILE DEVELOPMENT TABLET START */
+/*******************************************/
+@media all and (max-width: 1500px) and (min-width: 621px){
     
 
     header{
@@ -78,11 +308,14 @@ table {
     }
     header a{
         text-decoration: none;
+        color: #074370;
+    }
+    header a:hover{
+        color: #fff;
     }
     .logo{
-        width: 200px;
-        height: 100px;
-    
+        width: 75px;
+        height: 75px;    
     }
     .menuContainer{
         width: 75%;
@@ -163,9 +396,18 @@ table {
     /*******************************************/
     #identify{
         border: 2px solid orange;
-        height: 500px;
+        height: 600px;
         background: rgb(2,0,36);
         background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(189,182,150,1) 0%, rgba(29,194,58,1) 34%, rgba(11,219,188,1) 63%, rgba(19,46,191,1) 100%); 
+    }
+    #identify h2{
+        font-size: 24px;
+        margin: 10px;
+    }
+    #identify p{
+        max-width: 65ch;
+        padding: 0 20px;
+        margin: 0 15px;
     }
     .identifyContainer{
         width: 100%;
@@ -177,7 +419,7 @@ table {
     }
     .card{
         height: 300px ;
-        max-width: 35ch;  /* ch is basically how many characters long*/
+        max-width: 50ch;  /* ch is basically how many characters long*/
         color: aliceblue;
         margin: 5px 30px;
         box-shadow: 4px 4px 30px black;
@@ -198,29 +440,27 @@ table {
     .terrapin{
         background: hsl(41, 24%, 20% ); 
     }
-    .intro{
-        width: 300px;
-        height: 200px;
-        padding: 6px;
-        box-sizing: border-box;
-        position: absolute;
-    }
-
-    .intro h2{
-        margin: 10px;
-        font-size: 20px;
-    }
-    .intro p{
-        font-size: 16;
-        margin: 20px;
-    
-    }
-
-    .card:hover{
-        cursor: pointer;
-    }
-    .card:hover .intro{
-        height: 220px;
-        bottom: 240px;
-    }
+  
 }
+
+
+
+
+/********************************************/
+    /* MOBILE DEVELOPMENT TABLET END*/ 
+/*******************************************/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
