--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ table {
 
     header{
         width: 100%;
-        height: 65px;
+        height: 85px;
         background: #c5b7a9 ;
         display: flex;
     }
@@ -85,26 +85,60 @@ table {
         color: #fff;
     }
     .logo{
-        width: 75px;
+        width: 25%;
         height: 75px;    
     }
     .menuContainer{
         width: 75%;
+        height: 100%;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content: space-between;
+        align-items: flex-end;
+        border: 2px solid red;
     }
+
+   
     #menu{
+        position: fixed;
+        height: 100%;
         display: flex;
-        flex-direction: row;  
+        flex-direction: column;
+        flex-direction: center;
+        align-items: center;
+        z-index: 10;
+        transition: top 1s ease;
+        background:#08395e ;
+        color: #fff;
+        display: none;
         
     }
-    .menuElements{
-        display: flex;
-        justify-content: space-around;
+    #menu:hover{
+        background: #b89e6f;
+        color: #08395e;
+    }
+    .menuElements a{
+        display: inline-block;
+        text-decoration: none;
+        text-transform: uppercase;
         padding: 10px;
     }
-    
+    .openMenu{
+        font-size: 2em;
+        margin:20px;
+        display: block;
+        cursor: pointer;
+    }
+    #menu .closeMenu, i{
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        display: block;
+        cursor: pointer;
+    }
+    i{
+        display: inline-block;
+        padding: 12px;
+    }
     /*****************************************/
     /* Hero
     /*******************************************/
@@ -144,7 +178,7 @@ table {
     .main img{
         height: 50vh;
         width: 50vw;
-        box-shadow: 4px 4px 30px black;
+        box-shadow: 4px 4px 30px rgb(58, 166, 196);
     }
     .imgContainer{
         display: grid;
@@ -160,7 +194,7 @@ table {
         margin: 0 10px;
         width: 20vw;
         height: 20vh;
-        box-shadow: 4px 4px 30px black;
+        box-shadow: 4px 4px 30px rgb(160, 240, 191);
     }
     /*****************************************/
     /* Identification
@@ -179,30 +213,28 @@ table {
     .identifyContainer{
         width: 100%;
         margin: 40px 0 0 0 ;
-        border: 2px solid #FFF;
+        
 
     }
     .slide-container{
         max-width: 100vw;
-        width: 400px;
         height: 100vh;
-
     }
     .slide-content{
+    
         margin: 0 40px;
     }
     .cardWrapper{
         width: 100vw;
         height: 100vh;
-        border: 2px solid red;
-        overflow: hidden;
+   
     }
     .card{
-        width: 300px;
+        width: 70vw;
         color: #a0b6ca;
         box-shadow: 4px 4px 30px black;
         overflow: hidden;
-        border: 2px solid yellow;
+     
         
     }
     
@@ -211,13 +243,31 @@ table {
         height: 150px;
     
     }
-    .cardImg .innerImg{
-        object-fit: cover;
-        border-radius: 75%;
-    }
     .innerImg{
-        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-content: center;
     }
+    .africanTort{
+        width: 80%; 
+        height: 50vh;
+         margin-left: 45px;
+         border-radius: 55%;
+
+    }
+    .hawksbill{
+        width: 81%;
+        height: 50vh;
+        margin-left: 45px;
+        border-radius: 50%;
+    }
+    .db{
+        width: 80%;
+        height: 275px;
+        margin-left: 48px;
+        border-radius: 50%;
+    }
+
     .tortoise{
         background: hsl(146, 64%, 25%); 
      
@@ -229,6 +279,7 @@ table {
     .turtle{
         background: #074370;
     }
+    
     .terrapin{
         background: rgb(98, 70, 28);
     }
@@ -239,7 +290,7 @@ table {
         align-items: center;
         padding: 10px 14px;
     }
-    .overlayA, .overlayB{
+    .overlayA, .overlayB, .overlayC{
        
         left: 0;
         top: 0;
@@ -251,6 +302,9 @@ table {
     }
     .overlayB{
         background-color: #a0b6ca;
+    }
+    .overlayC{
+        background-color: rgb(21, 96, 21);
     }
     .intro{
         margin-top: 25px ;
